--- a/style.css
+++ b/style.css
@@ -449,7 +449,6 @@ flex-shrink: 0;
   -ms-flex-pack: center;
   justify-content: center;
   gap: 30px;
-  margin-bottom: 86px;
 }
 
 .advantages__item {
@@ -786,16 +785,19 @@ flex-shrink: 0;
   }
   .subscribl__img2 {    
     width: 100%;
-    height: auto;    
-    margin-bottom: 156px;
+    height: auto;        
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 200px;
+    gap: 200px;    
+  min-height: 400px;
+  background-size: cover;
+  background-position: center;
+  background-image: url("img/subscribe.jpg");
     
 }
     .subscribl_foto_txt{
@@ -812,6 +814,10 @@ flex-shrink: 0;
     align-items: center;
     gap: 24px;
     flex-wrap: wrap;
+  }
+  .subscribe_txt{
+    text-align: center;
+    font-family: Lato;
   }
   .vestibulum_norm{
     color: #222224;
@@ -1005,5 +1011,113 @@ line-height: normal;
     flex-wrap: wrap;    
     margin-bottom: 140px;
     gap: 58px;
+  }
+}
+@media screen and (min-width: 200px) and (max-width:375px){
+  .center {
+    padding-left: calc(50% - 171.5px);
+    padding-right: calc(50% - 171.5px);
+  }
+  .header{
+    
+  }
+  .header__link-site{
+    display: none;
+  }
+  
+  .promo__img{
+    display: none;    
+  }
+  .promo__content{
+    padding-left: 56px;
+
+  }
+  .promo__info{
+    margin-bottom: 48%;
+    border-left: 15px solid #F16D7F;
+  }
+  .promo__title{
+    color: #222;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    font-family: Lato;
+  }
+  .of_luxerious{
+    color: #222;
+    font-family: Lato;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;    
+  }
+  .fashion{
+    color: #F16D7F;
+    font-family: Lato;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  .sale {    
+    display: flex;
+    gap: 32px;    
+    flex-direction: column;
+    margin-bottom: 64px;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .sale__item {
+    position: relative;
+  }  
+    .sale__item_big{
+    position: relative;
+    width: 343px;
+    height: 111px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;  
+    background-image: url("img/sibig.jpg");
+  }
+  .product-box__text{
+    margin-bottom: 65px;
+  }
+  .product-box__content{
+         grid-template-columns: repeat(auto-fit, 359px);
+  }
+  .advantages{
+    gap: 47px;
+    margin-bottom: 0px;
+  }
+  .subscribl__img2{
+    min-height: 550px;
+    background-size: cover;
+    background-position: 0%;
+    flex-direction: column;
+    margin-bottom: 0px;
+  }
+  .subscribe_txt{
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;    
+    color: #222224;
+  }
+  .subscribl_content{
+    color: #222224;
+    text-align: center;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 153.2%;
+
+  }
+  .footer{
+    padding: 34px 0px 9px 0px;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column-reverse;
   }
 }
